# rust-delegate

./: .release-plz.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  nightly-build.yml  publish.yml  test.yml
src/: attributes.rs  lib.rs
tests/: append_args.rs  argument_modifier.rs  associated.rs  associated_const_delegation.rs  async_await.rs  closure.rs  delegate_to_enum.rs  delegation.rs  expr.rs  expr_attribute.rs  fields.rs  function.rs  generic.rs  in_macro_expansion.rs  inline_args.rs  nested.rs  returntype.rs  segment_attributes.rs  stack.rs  through_trait.rs
tests/expand/: delegate.expanded  delegate.expanded.rs  delegate.rs  fields.expanded.rs  fields.rs
