[package]
name = "delegate"
description = "Method delegation with less boilerplate"
version = "0.4.2"
authors = ["Godfrey Chan <godfreykfc@gmail.com>", "Jakub Beránek <berykubik@gmail.com>"]
repository = "https://github.com/chancancode/rust-delegate"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
include = [
    "src/*.rs",
    "Cargo.toml",
]

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro = true
